# fastapi_app

./: README.md
main/: .gitignore  pyproject.toml  server.py
main/alembic/: env.py
main/database/: auth.py  db.py  utils.py
main/models/: service.py  todo.py  user.py
main/routers/: auth.py  service.py  todo.py  user.py
main/schemas/: service.py  todo.py  user.py
